syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="QueryPayInit";

//Generated By BrewRobot:Wed May 11 15:43:36 CST 2016

message PBIFE_trade_queryPayInit{
	///ife/trade/queryPayInit.html
	message PayInitWrap{
		string payAmount = 1;	 //,支付总金额,String,不校验,否,
		string freezeDeposit = 2;	 //,已冻结保证金金额,String,不校验,是,
		string balanceY = 3;	 //,可用余额,String,不校验,是,
		string payAmountWithBalance = 4;	 //,余额支付金额,String,不校验,否,
		string inAmountWithBalance = 5;	 //,余额支付充值金额,String,不校验,是,
		string inAmountWithoutBalance = 6;	 //,非余额支付充值金额,String,不校验,是,
		string repeatCommitCheckCode = 7;	 //,重复提交校验码,String,不校验,否,
		string isJumpToInFund = 8;	 //,是否需跳转充值:1为需要跳转,
		
	}


	PayInitWrap payInitWrap = 1;


}

message Ret_PBIFE_trade_queryPayInit{
	///ife/trade/queryPayInit.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_trade_queryPayInit data=3;


}

message REQ_PBIFE_trade_queryPayInit{
	///ife/trade/queryPayInit.html

	string productCode = 1; //,产品编号,String,不校验,否,

	string delegateNum = 2; //,购买金额,String,不校验,否,

	string payType = 3; //,支付类型,String,不校验,否,

	string orderType = 4; //,预约类型,String,不校验,是,


}